Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22816

Assertion `node->space == fil_system.sys_space' failed in fil_aio_callback

    XMLWordPrintable

Details

    Description

      --source include/have_innodb.inc
      --source include/have_partition.inc
       
      SET GLOBAL innodb_immediate_scrub_data_uncompressed= ON;
      SET GLOBAL innodb_stats_persistent= ON;
       
      CREATE TABLE t (a INT, KEY(a)) ENGINE=InnoDB PARTITION BY RANGE (a) (PARTITION p0 VALUES LESS THAN (6), PARTITION p1 VALUES LESS THAN (174), PARTITION p2 VALUES LESS THAN (48317), PARTITION pn VALUES LESS THAN MAXVALUE);
      ALTER TABLE t PARTITION BY RANGE (a) SUBPARTITION BY HASH (a) SUBPARTITIONS 2 (PARTITION p0 VALUES LESS THAN (5), PARTITION p1 VALUES LESS THAN (53), PARTITION p2 VALUES LESS THAN (20405), PARTITION p3 VALUES LESS THAN MAXVALUE);
       
      --sleep 3
       
      SELECT * FROM t;
      

      10.5 d642c5b83

      mariadbd: /data/src/10.5-bug/storage/innobase/fil/fil0fil.cc:3972: void fil_aio_callback(os_aio_userdata_t*): Assertion `node->space == fil_system.sys_space' failed.
      200605 19:29:31 [ERROR] mysqld got signal 6 ;
       
      #3  0x00007f17d9ec3f12 in __GI___assert_fail (assertion=0x56029216b3e0 "node->space == fil_system.sys_space", file=0x560292165e20 "/data/src/10.5-bug/storage/innobase/fil/fil0fil.cc", line=3972, function=0x56029216fd40 <fil_aio_callback(os_aio_userdata_t*)::__PRETTY_FUNCTION__> "void fil_aio_callback(os_aio_userdata_t*)") at assert.c:101
      #4  0x0000560290f1636e in fil_aio_callback (data=0x7f17c93c1b00) at /data/src/10.5-bug/storage/innobase/fil/fil0fil.cc:3972
      #5  0x0000560290aa0551 in io_callback (cb=0x633000089a30) at /data/src/10.5-bug/storage/innobase/os/os0file.cc:3901
      #6  0x000056029103d92b in tpool::task_group::execute (this=0x612000009550, t=0x633000089ab8) at /data/src/10.5-bug/tpool/task_group.cc:55
      #7  0x000056029103e1f9 in tpool::task::execute (this=0x633000089ab8) at /data/src/10.5-bug/tpool/task.cc:47
      #8  0x0000560291032a3b in tpool::thread_pool_generic::worker_main (this=0x61600001ad80, thread_var=0x63000002f980) at /data/src/10.5-bug/tpool/tpool_generic.cc:518
      #9  0x000056029103d39f in std::__invoke_impl<void, void (tpool::thread_pool_generic::* const&)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*>(std::__invoke_memfun_deref, void (tpool::thread_pool_generic::* const&)(tpool::worker_data*), tpool::thread_pool_generic*&&, tpool::worker_data*&&) (__f=@0x604000017f28: (void (tpool::thread_pool_generic::*)(tpool::thread_pool_generic * const, tpool::worker_data *)) 0x5602910328a8 <tpool::thread_pool_generic::worker_main(tpool::worker_data*)>, __t=<unknown type in /data/src/10.5-bug/sql/mariadbd, CU 0x80d0b74, DIE 0x80e22ec>, __args#0=<unknown type in /data/src/10.5-bug/sql/mariadbd, CU 0x80d0b74, DIE 0x80e22f8>) at /usr/include/c++/6/functional:227
      #10 0x000056029103d201 in std::__invoke<void (tpool::thread_pool_generic::* const&)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*>(void (tpool::thread_pool_generic::* const&)(tpool::worker_data*), tpool::thread_pool_generic*&&, tpool::worker_data*&&) (__fn=@0x604000017f28: (void (tpool::thread_pool_generic::*)(tpool::thread_pool_generic * const, tpool::worker_data *)) 0x5602910328a8 <tpool::thread_pool_generic::worker_main(tpool::worker_data*)>, __args#0=<unknown type in /data/src/10.5-bug/sql/mariadbd, CU 0x80d0b74, DIE 0x80e22ec>, __args#1=<unknown type in /data/src/10.5-bug/sql/mariadbd, CU 0x80d0b74, DIE 0x80e22f8>) at /usr/include/c++/6/functional:251
      #11 0x000056029103d195 in std::_Mem_fn_base<void (tpool::thread_pool_generic::*)(tpool::worker_data*), true>::operator()<tpool::thread_pool_generic*, tpool::worker_data*>(tpool::thread_pool_generic*&&, tpool::worker_data*&&) const (this=0x604000017f28, __args#0=<unknown type in /data/src/10.5-bug/sql/mariadbd, CU 0x80d0b74, DIE 0x80e22ec>, __args#1=<unknown type in /data/src/10.5-bug/sql/mariadbd, CU 0x80d0b74, DIE 0x80e22f8>) at /usr/include/c++/6/functional:604
      #12 0x000056029103d147 in std::_Bind_simple<std::_Mem_fn<void (tpool::thread_pool_generic::*)(tpool::worker_data*)> (tpool::thread_pool_generic*, tpool::worker_data*)>::_M_invoke<0ul, 1ul>(std::_Index_tuple<0ul, 1ul>) (this=0x604000017f18) at /usr/include/c++/6/functional:1391
      #13 0x000056029103d045 in std::_Bind_simple<std::_Mem_fn<void (tpool::thread_pool_generic::*)(tpool::worker_data*)> (tpool::thread_pool_generic*, tpool::worker_data*)>::operator()() (this=0x604000017f18) at /usr/include/c++/6/functional:1380
      #14 0x000056029103d024 in std::thread::_State_impl<std::_Bind_simple<std::_Mem_fn<void (tpool::thread_pool_generic::*)(tpool::worker_data*)> (tpool::thread_pool_generic*, tpool::worker_data*)> >::_M_run() (this=0x604000017f10) at /usr/include/c++/6/thread:197
      #15 0x00007f17da80be6f in ?? () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
      #16 0x00007f17dbe4c4a4 in start_thread (arg=0x7f17c93c2700) at pthread_create.c:456
      #17 0x00007f17d9f80d0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:97
      

      Introduced recently, I didn't bisect for the exact commit. MDEV-15053 is suspected.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.