MDEV-22816 Assertion `node->space == fil_system.sys_space' failed in fil_aio_callback

fil_aio_callback(): Remove a bogus assertion that was added in
commit b1ab211dee599eabd9a5b886fafa3adea29ae041 (MDEV-15053).
We will have !bpage for any write by buf_flush_freed_page().